# ZP-1

./: .gitignore  AGENTS.md  AUDIT.md  Cargo.toml  FUZZING.md  PROVIDERS.md  README.md  SECURITY.md  SPEC.md  SUPPLY_CHAIN.md  THREAT_MODEL.md  VALIDATION.md  deny.toml
.github/workflows/: ci.yml  fuzz-smoke.yml  supply-chain.yml
docs/: IMPLEMENTATION_INVARIANTS.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode_any.rs  mutate_valid_vector.rs  open_any.rs
scripts/: run-fuzz-smoke.sh
src/: codec.rs  constants.rs  error.rs  hash.rs  kdf.rs  lib.rs  merkle.rs  object.rs  open.rs  provider.rs  seal.rs  test_support.rs
test-vectors/: README.md  zp1-core-insecure-test-provider-v0.json
test-vectors/negative/: README.md  append_trailing_byte.json  drop_chunk_if_constructible.json  duplicate_matching_recipient_hash_if_constructible.json  reorder_chunks_if_constructible.json  tamper_archive_present_invalid.json  tamper_base_header_body.json  tamper_base_header_length.json  tamper_chunk_ciphertext.json  tamper_chunk_count_zero.json  tamper_chunk_length.json  tamper_magic.json  tamper_manifest_tag_body.json  tamper_manifest_tag_length.json  tamper_public_manifest_body.json  tamper_public_manifest_length.json  tamper_recipient_count_zero.json  tamper_recipient_header_body.json  tamper_recipient_stanza_length.json  tamper_signature_block_length.json  tamper_signature_body.json  (+6 more)
tests/: canonical.rs  exhaustive_mutation.rs  failure_collapse.rs  limits.rs  negative_vectors.rs  protocol_drift.rs  roundtrip.rs  tamper.rs  vectors.rs  wire_stability.rs
tools/: README.md
(+1 files in other folders)
